# Chairloader

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CNAME  ChairLoader.sln  README.md  index.html  mkdocs.yml  sitemap.xml  vcpkg.json
ChairLoader/: ArkBasicTypes.h  ArkEntityArchetypeLibrary.h  ArkEntityClassLibrary.h  ArkEnums.h  ArkMaterialAnimation.h  ArkPlayerComponent.h  ArkPlayerLight.h  ArkPlayerMovementStates.h  ArkProjectile.h  ArkPsiPowerComponent.h  ArkSignalSystem.h  CMakeLists.txt  CScriptableBase.h  ChairLoader.cpp  ChairLoader.h  ChairLoader.vcxproj  ChairLoader.vcxproj.filters  ChairLoaderImGui.cpp  ChairLoaderImGui.h  Chairloader.cpp  Chairloader.h  ChairloaderConfigManager.cpp  ChairloaderConfigManager.h  ChairloaderGUIConsole.h  ChairloaderGUIEntityManager.cpp  ChairloaderGUIEntityManager.h  ChairloaderGUILog.cpp  ChairloaderGUILog.h  ChairloaderGUIPlayerManager.cpp  ChairloaderGUIPlayerManager.h  ChairloaderGui.cpp  ChairloaderGui.h  ChairloaderUtils.cpp  ChairloaderUtils.h  CharLoaderImGui.cpp  CharLoaderImGui.h  DevConsoleDialog.cpp  DevConsoleDialog.h  EntityManager.cpp  EntityManager.h  (+34 more)
ChairLoader/Core/: ChairVarManager.cpp  ChairVarManager.h
ChairLoader/Editor/: Editor.cpp  Editor.h  EditorView.h
ChairLoader/ImGui/: imgui_widget_flamegraph.cpp
ChairLoader/RenderDll/: CMakeLists.txt  ChairRender.cpp  ChairRender.h  D3DHWShaderCompiling.cpp  D3DRenderAuxGeom.cpp  D3DRenderAuxGeom.h  DebugMarkers.cpp  DebugMarkers.h  RenderAuxGeom.cpp  RenderAuxGeomPatch.cpp  RenderCommandHandler.cpp  RenderCommandHook.asm  RenderDll.cpp  RenderDll.h  TextMessages.cpp  pch.h
ChairLoader/Tools/: LocalizationUtil.cpp  LocalizationUtil.h
ChairLoaderLoader/: CMakeLists.txt  ChairLoaderLoader.vcxproj  ChairLoaderLoader.vcxproj.filters  dllmain.cpp  mswsock_proxy.h
ChairLoaderModules/: CMakeLists.txt  EntityHierarchy.cpp  EntityHierarchy.h  EntityInspector.cpp  EntityInspector.h  EntityManager.cpp  EntityManager.h  FileBrowser.cpp  FileBrowser.h  PlayerManager.cpp  PlayerManager.h  README.md  WorldManager.cpp  WorldManager.h
ChairLoaderModules/Editor/: Editor.cpp  Editor.h  EditorView.cpp
ChairLoaderXMLLoader/: ArkNpcs.xml  ArkNpcs_ExtMod2.xml  CMakeLists.txt  ChairLoaderXMLLoader.cpp  ChairLoaderXMLMerger.vcxproj  ChairLoaderXMLMerger.vcxproj.filters  Drawing.cpp  NewArkNpcs  UI.cpp  UI.h  chairloaderConfig.xml  chairloaderModManager.h
ChairManager/: BinaryVersionCheck.cpp  BinaryVersionCheck.h  CMakeLists.txt  ChairInstallWizard.cpp  ChairInstallWizard.h  ChairManager.cpp  ChairManager.h  ChairUninstallWizard.cpp  ChairUpdateWizard.cpp  ConfigManager.cpp  ConfigManager.h  CrashHandler.cpp  CrashHandler.h  GamePathDialog.cpp  GameVersion.cpp  GameVersion.h  LogEntry.h  LuaUtils.cpp  LuaUtils.h  LuaUtilsTest.cpp  Mod.h  ModConfig.h  Paths.h  README.md  UI.cpp  UI.h  UpdateHandler.cpp  UpdateHandler.h  UpdateURL.h  XMLMerger.cpp  XMLMerger.h  appicon.rc  main.cpp  version.rc.in
ChairManager/ChairWizards/: ChairInstallWizard.cpp  ChairInstallWizard.h  ChairUninstallWizard.cpp  ChairUpdateWizard.h  GamePathDialog.cpp
ChairManager/Data/: .gitignore  HashesOutput.xml  ID Matching.ipynb  MergingLibrary.xml  VariableLibrary.xml  _PackageConfig.json  attribute_list.txt  chairloader_default.xml  id_files.txt  id_name_files.txt  patchChecksums.xml
ChairManager/Merging/: ChairMerger.cpp  ChairMerger.h  ChairMergerTest.cpp  FileChecksum.h  HashUtils.cpp  HashUtils.h  HashUtilsTest.cpp  MergingPolicy.h  MergingProcess.d2  README.md  XMLMerger2.cpp  XMLMerger2.h  XMLMerger2Test.cpp  ZipUtils.cpp  ZipUtils.h  ZipUtilsTest.cpp
ChairManager/Resources/: appicon.rc  version.rc.in
ChairManager/Tests/: XmlTestUtils.cpp  XmlTestUtils.h
Chairloader/Common/: CMakeLists.txt  ConsoleColorParser.cpp  ConsoleColorParser.h  EditorControls.cpp  EditorControls.h  GUIUtils.h  ImGuiDoubleBuffering.h  ImGuiRendererD3D11.h
Chairloader/Core/: BackupDxState.cpp  CMakeLists.txt  ChairImGui.cpp  ChairImGui.h  ChairLoaderImGui.cpp  ChairLoaderImGui.h  ChairLogger.cpp  ChairLogger.h  ChairVarManager.h  ChairloaderConfigManager.cpp  ChairloaderConfigManager.h  ChairloaderCore.cpp  ChairloaderCore.h  ChairloaderGui.cpp  ChairloaderGui.h  ImGuiDoubleBuffering.h  ImGuiRendererD3D11.cpp  LogManager.cpp  LogManager.h  ModDllManager.cpp  ModDllManager.h  OverlayLog.cpp  OverlayLog.h
Chairloader/CryRender/: CMakeLists.txt  ChairRender.cpp  ChairRender.h  ChairloaderCryRender.cpp  ChairloaderCryRender.h  pch.h
Chairloader/Dll/: .gitignore  (+11 more)
ChairloaderModLoader/: BinaryVersionCheck.cpp  BinaryVersionCheck.h  CMakeLists.txt  ChairInstallWizard.cpp  ChairUninstallWizard.cpp  ChairUninstallWizard.h  ChairUpdateWizard.cpp  ConfigManager.cpp  ConfigManager.h  Drawing.cpp  Drawing.h  GamePathDialog.cpp  GamePathDialog.h  GameVersion.cpp  GameVersion.h  MergingLibrary.xml  ModLoader.cpp  ModLoader.h  PathUtils.h  README.md  UI.cpp  UI.h  UpdateHandler.cpp  UpdateHandler.h  XMLMerger.cpp  XMLMerger.h  appicon.rc  main.cpp  pch.h  version.rc.in
Common/: CMakeLists.txt  EntityUtils.cpp  EntityUtils.h  Logging.cpp  Logging.h  PreyFunctions.cpp  PreyFunctions.h  VTableHook.cpp  mem.cpp  mem.h  preyDllObjects.h  proc.cpp  proc.h
CommonChairManager/: CMakeLists.txt  version_info.rc.in
CommonModLoader/: CMakeLists.txt  IconsMaterialDesign.h
ExampleMod/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
ModToolKit/: CMakeLists.txt  ConfigManager.cpp  ConfigValidationStage.cpp  ConfigValidationStage.h  FlowgraphEditor.cpp  FlowgraphEditor.h  GameModule.cpp  GameModule.h  LoadGameStage.cpp  LoadGameStage.h  MainConfig.cpp  MainConfig.h  ModToolKit.cpp  ModToolKit.h  ProjectManager.cpp  ProjectSelectStage.cpp  ProjectSelectStage.h
Preditor/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigValidationStage.h  FlowgraphEditor.cpp  FlowgraphEditor.h  GameModule.cpp  LoadGameStage.h  LookingGlass.cpp  LookingGlass.h  Preditor.cpp  Preditor.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  ProjectSelectStage.cpp  ProjectSelectStage.h  pch.h
(+9018 files in other folders)
